Added solution to string exercises